# tree-sitter-twol

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example.twol  go.mod  grammar.js  mise.toml  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  release.yml
bindings/c/: tree-sitter-twol.pc.in
bindings/c/tree_sitter/: tree-sitter-twol.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_twol/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTwolTests/: TreeSitterTwolTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
